@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FIDO NetMail/EchoMail
  *
- * $Id: ftn2rfc.c,v 1.3 2004/01/28 00:14:50 rusfidogate Exp $
+ * $Id: ftn2rfc.c,v 1.4 2004/02/17 18:38:15 rusfidogate Exp $
  *
  * Convert FTN mail packets to RFC mail and news batches
  *
@@ -39,7 +39,7 @@
 
 
 #define PROGRAM 	"ftn2rfc"
-#define VERSION 	"$Revision: 1.3 $"
+#define VERSION 	"$Revision: 1.4 $"
 #define CONFIG		DEFAULT_CONFIG_GATE
 
 
@@ -1223,7 +1223,7 @@ int unpack(FILE *pkt_file, Packet *pkt)
 	    ref_line = s_msgid_convert_origid(p);
 	if(!ref_line)
 	    if( (p = kludge_get(&body.kludge, "REPLY", NULL)) )
-		ref_line = s_msgid_fido_to_rfc(p, NULL, area==NULL);
+		ref_line = s_msgid_fido_to_rfc(p, NULL, area);
 	/* ^AGATEWAY */
 	gateway = kludge_get(&body.kludge, "GATEWAY", NULL);
 
