@@ -1,3 +1,8 @@
+2004-02-17  Andrey Slusar <rusfidogate@users.sourceforge.net>
+
+	* src/gate/ftn2rfc.c: fix area-flag
+	* src/common/msgid.c: fix DBC_HISTORY
+
 2004-02-12  Andrey Slusar <rusfidogate@users.sourceforge.net>
 
 	* src/common/node.c: fix the problem with dupes of
